Debug: print current user

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,6 @@ jobs:
       - name: Save Nix Cache
         if: ${{ runner.os == 'Linux' }}
         run: |
+          whoami
           find "${{ runner.temp }}" -ls
           nix copy --to "file://${{ runner.temp }}/nix-binary-cache" nixpkgs\#pkgsCross.musl64.hello
