--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Cache Nix
         uses: actions/cache@v4
         with:
-          path: file://${{ runner.temp }}/nix-binary-cache
+          path: ${{ runner.temp }}/nix-binary-cache
           key: ${{ runner.os }}-nix-cache-sgillespie
 
       - name: Look at temp contents
