Try require-sigs false

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,39 +8,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Look at temp contents
-        run: |
-          mkdir -p "${{ runner.temp }}/nix-binary-cache/nar"
-          find "${{ runner.temp }}" -ls
-
       - name: Cache Nix
         uses: actions/cache@v4
         with:
           path: ${{ runner.temp }}/nix-binary-cache
           key: ${{ runner.os }}-nix-cache-sgillespie
 
-      - name: Look at temp contents
-        run: |
-          find "${{ runner.temp }}" -ls
-
       - name: Install Nix
         uses: cachix/install-nix-action@v30
         with:
           extra_nix_config: |
             extra-substituters = file://${{ runner.temp }}/nix-binary-cache
-
-      - name: Look at temp contents
-        run: |
-          find "${{ runner.temp }}" -ls
+            require-sigs = false
 
       - name: Build hello
         run: |
-          find "${{ runner.temp }}" -ls
           nix build -v nixpkgs\#pkgsCross.musl64.hello
 
       - name: Save Nix Cache
         if: ${{ runner.os == 'Linux' }}
         run: |
-          whoami
           find "${{ runner.temp }}" -ls
           nix copy --to "file://${{ runner.temp }}/nix-binary-cache" nixpkgs\#pkgsCross.musl64.hello
