--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,10 @@ jobs:
           path: ${{ runner.temp }}/nix-binary-cache
           key: ${{ runner.os }}-nix-cache-sgillespie
 
+      - name: Prepopulate Nix Cache
+        run: |
+          mkdir -p "${{ runner.temp }}/nix-binary-cache/nar"
+
       - name: Install Nix
         uses: cachix/install-nix-action@v30
         with:
