--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Create Nix post build script
         run: |
-          "${{ runner.temp }}/post-build.sh" < EOF
+          "cat <<EOF > ${{ runner.temp }}/post-build.sh"
             set -eu
             set -f         # Disable globbing
             export IFS=' ' # Separate paths by space
