Add more output to post build script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Create Nix post build script
         run: |
           cat <<EOF > "${{ runner.temp }}/post-build.sh"
-            set -eu
+            set -eux
             set -f         # Disable globbing
             export IFS=' ' # Separate paths by space
 
