--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Create Nix post build script
         run: |
           cat <<EOF > "${{ runner.temp }}/post-build.sh"
+            #!/usr/bin/env bash
             set -eux
             set -f         # Disable globbing
             export IFS=' ' # Separate paths by space
