Try to figure out what's going wrong

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,8 @@ jobs:
 
           cat "${{ runner.temp }}/post-build.sh"
 
+          ${{ runner.temp }}/post-build.sh
+
       - name: Prepopulate Nix Cache
         run: |
           mkdir -p "${{ runner.temp }}/nix-binary-cache/nar"
