--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,15 @@ jobs:
           path: ${{ runner.temp }}/nix-binary-cache
           key: ${{ runner.os }}-nix-cache-sgillespie
 
+      - name: Install Nix
+        uses: cachix/install-nix-action@v30
+        with:
+          extra_nix_config: |
+            extra-substituters = file://${{ runner.temp }}/nix-binary-cache
+            extra-trusted-public-keys = local-cache-1:PrMkzjlx4rG/54500KcEEHoGoGltjMbB+CKiRWGG370=
+            require-sigs = true
+            post-build-hook = ${{ runner.temp }}/post-build.sh
+
       - name: Create Nix post build script
         run: |
           cat <<EOF > "${{ runner.temp }}/post-build.sh"
@@ -22,6 +31,8 @@ jobs:
             set -eux
             set -f         # Disable globbing
             export IFS=' ' # Separate paths by space
+
+            echo "$PATH"
 
             echo "Signing paths" $OUT_PATHS
             nix store sign --key-file nix-cache-secret.key --recursive $OUT_PATHS
@@ -40,14 +51,7 @@ jobs:
         run: |
           mkdir -p "${{ runner.temp }}/nix-binary-cache/nar"
 
-      - name: Install Nix
-        uses: cachix/install-nix-action@v30
-        with:
-          extra_nix_config: |
-            extra-substituters = file://${{ runner.temp }}/nix-binary-cache
-            extra-trusted-public-keys = local-cache-1:PrMkzjlx4rG/54500KcEEHoGoGltjMbB+CKiRWGG370=
-            require-sigs = true
-            post-build-hook = ${{ runner.temp }}/post-build.sh
+
 
       - name: Build hello
         run: |
