Remove some debugging logic

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,17 +35,15 @@ jobs:
             echo "$PATH"
 
             echo "Signing paths" \$OUT_PATHS
-            nix store sign --key-file nix-cache-secret.key --recursive $OUT_PATHS
+            nix store sign --key-file nix-cache-secret.key --recursive \$OUT_PATHS
 
             echo "Uploading paths" \$OUT_PATHS
-            nix copy --to "file://${{ runner.temp }}/nix-binary-cache" nixpkgs\#pkgsCross.musl64.hello
+            nix copy --to "file://${{ runner.temp }}/nix-binary-cache" \$OUT_PATHS
           EOF
 
           chmod +x "${{ runner.temp }}/post-build.sh"
 
           cat "${{ runner.temp }}/post-build.sh"
-
-          ${{ runner.temp }}/post-build.sh
 
       - name: Prepopulate Nix Cache
         run: |
