--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,8 +49,8 @@ jobs:
         run: |
           mkdir -p "${{ runner.temp }}/nix-binary-cache/nar"
 
-
-
       - name: Build hello
         run: |
+          set -x
+          cat ${{ runner.temp }}/post-build.sh
           nix build -v nixpkgs\#pkgsCross.musl64.hello
