See if we can call nix at all

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,8 @@ jobs:
 
             echo "$PATH"
 
+            nix --version
+
             echo "Signing paths" \$OUT_PATHS
             # nix store sign --key-file nix-cache-secret.key --recursive \$OUT_PATHS
 
