--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,4 +55,4 @@ jobs:
         run: |
           set -x
           cat ${{ runner.temp }}/post-build.sh
-          nix build -vvv nixpkgs\#pkgsCross.musl64.hello
+          nix build -vvvvv nixpkgs\#pkgsCross.musl64.hello
