--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,4 +56,5 @@ jobs:
         run: |
           which nix
           nix-channel --update
+          nix build -v nixpkgs\#pkgsCross.musl64.hello
           nix-build --expr '(import <nixpkgs> {}).writeText "example" (builtins.toString builtins.currentTime)'
