--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ${{ runner.temp }}/nix-binary-cache
-          key: ${{ runner.os }}-nix-cache-sgillespie
+          key: ${{ runner.os }}-nix-cache-${{ hash-files('flake.lock', 'Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-nix-cache-
 
       - name: Install Nix
         uses: cachix/install-nix-action@v30
